--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
   <header>
-    <h1>Fran Gómez, MRCVS</h1>
-    <p>Locum Vet | AP in Ophthalmology | Affiliate Tools & Tips</p>
+    <h1>Francisco M. Gómez Villasclaras MRCVS</h1>
+    <p>Locum Vet | CertAVP, PgC(SAO) AP in Ophthalmology | Affiliate Tools & Tips</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
