--- a/gear.html
+++ b/gear.html
@@ -18,10 +18,10 @@
   <main>
     <h2>🧰 Tools I Use as a Locum Vet</h2>
 
-    <h3>1. Penlight – Keeler Professional</h3>
+    <h3>Nitecore CU6 Torch</h3>
     <p>
-      Reliable and bright, this is what I use to check PLRs daily. 
-      <a href="https://www.amazon.co.uk/your-affiliate-link" target="_blank">Check it out here</a>.
+      A potential workaround for colorimetric PLR.
+      <a href="https://amzn.to/4kCurZn" target="_blank">Check it out here</a>.
     </p>
 
     <h3>2. Digital Calipers</h3>
