--- a/gear.html
+++ b/gear.html
@@ -18,21 +18,18 @@
   <main>
     <h2>🧰 Tools I Use as a Locum Vet</h2>
 
-    <h3>Nitecore CU6 Torch</h3>
-    <p>
-      A potential workaround for colorimetric PLR.
-      <a href="https://amzn.to/4kCurZn" target="_blank">Check it out here</a>.
-    </p>
 
-    <h3>2. Digital Calipers</h3>
-    <p>
-      For accurate corneal measurements, especially when checking ulcer depth.
-    </p>
+           <!-- Producto 1 --> 
+    <div style="background: white; border: 1px solid #ddd; border-radius: 8px; padding: 10px; width: 250px; text-align: center;">
+      <h3>Nitecore CU6 Torch</h3>
+      <a href="https://amzn.to/4kCurZn" target="_blank" rel="nofollow">
+        <img src="https://m.media-amazon.com/images/I/61qDe47G8JL._AC_SX425_.jpg" alt="torch" style="width: 100%; height: auto; border-radius: 4px;">
+        <p style="font-size: 1em; margin: 10px 0;">Potential workaround for colorimetric PLR</p>
+        <button style="background: #FF9900; border: none; padding: 10px 16px; color: white; border-radius: 5px; cursor: pointer;">Ver en Amazon</button>
+      </a>
+    </div>
 
-    <h3>3. Carry Case</h3>
-    <p>
-      Keeps my gear organized between clinics.
-    </p>
+
 
     <p><em>All links may be affiliate links – I only recommend what I personally use.</em></p>
   </main>
