--- a/gear.html
+++ b/gear.html
@@ -31,7 +31,7 @@
 
 
 
-    <p><em>All links may be affiliate links – I only recommend what I personally use.</em></p>
+    <p><em>All links may be affiliate links – I only recommend what I personally use or recommended by trusted colleagues</em></p>
   </main>
 
   <footer>
