--- a/gear.html
+++ b/gear.html
@@ -16,12 +16,13 @@
   </header>
 
   <main>
-    <h2>🧰 Tools I Use as a Locum Vet</h2>
+    <h2>🧰 Tools I Use as a Veterinary Ophthalmologist & Locum Vet</h2>
 
 
            <!-- Producto 1 --> 
     <div style="background: white; border: 1px solid #ddd; border-radius: 8px; padding: 10px; width: 250px; text-align: center;">
       <h3>Nitecore CU6 Torch</h3>
+      <h2>Colorimetric PLR can help you differenciate SARDS cases. This torch is not specifically designed for this purpose but may be used as such</h2>
       <a href="https://amzn.to/4kCurZn" target="_blank" rel="nofollow">
         <img src="https://m.media-amazon.com/images/I/61qDe47G8JL._AC_SX425_.jpg" alt="torch" style="width: 100%; height: auto; border-radius: 4px;">
         <p style="font-size: 1em; margin: 10px 0;">Potential workaround for colorimetric PLR</p>
