--- a/gear.html
+++ b/gear.html
@@ -7,11 +7,11 @@
 </head>
 <body>
   <header>
-    <h1>Fran's Recommended Tools</h1>
+    <h1>Recommended Tools</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="gear.html">My Tools</a>
+      <a href="tools.html">My Tools</a>
     </nav>
   </header>
 
