--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="gear.html">My Tools</a>
+      <a href="tools.html">My Tools</a>
     </nav>
   </header>
 
