--- a/about.html
+++ b/about.html
@@ -16,12 +16,14 @@
   </header>
 
   <main>
-    <p>Hello! I’m Fran, a veterinary locum working in the UK with a special interest in ophthalmology. I’ve worked across multiple practices, supporting teams and bringing my own reliable ophthalmic tools to get the job done efficiently.</p>
-    <p>This site is where I share useful gear I carry, and little tips from my day-to-day locum work. Feel free to explore!</p>
+    <p>Hello! I’m Fran, a mobile veterinary ophthalmologist in Costa del Sol. I often work as a locum in the UK in first opinion. I've worked across multiple practices, supporting teams and bringing my ophthalmology experience and some of my tools to get the job done efficiently.</p>
+    <p>In this site, I share useful gear I carry, and little tips from my day-to-day locum work. Feel free to explore!</p>
+    <p>Interested in hiring my as a locum? Check out my CV<a href="https://ojoveterinario.es/cv-english">here</a></p>
+    <p>You can </p>
   </main>
 
   <footer>
-    <p>© 2025 Fran Gómez</p>
+    <p>© 2025 Francisco Gómez</p>
   </footer>
 </body>
 </html>
