--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Fran Gómez | Built with GitHub Pages</p>
+    <p>© 2025 Francisco Gómez | Built with GitHub Pages</p>
   </footer>
 </body>
 </html>
