--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <h1>Francisco M. Gómez Villasclaras MRCVS</h1>
-    <p>Locum Vet | CertAVP, PgC(SAO) AP in Ophthalmology | Affiliate Tools & Tips</p>
+    <p>Locum Vet | CertAVP PgC(SAO) & AP in Ophthalmology | Affiliate Tools & Tips</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
@@ -19,7 +19,7 @@
   <main>
     <h2>Welcome!</h2>
     <p>I’m Fran, a UK-based veterinary locum with a special interest in ophthalmology. This site shares what I use, what I learn, and what helps.</p>
-
+<br/>
     <h3>🔧 Featured Tool</h3>
     <p><strong>Penlight for Pupils:</strong> My go-to pupil-checking lamp is the <a href="https://www.amazon.co.uk/your-affiliate-link" target="_blank">Keeler Professional Penlight</a> – solid, reliable, and always in my pocket.</p>
 
