--- a/index.html
+++ b/index.html
@@ -19,11 +19,18 @@
 
   <main>
     <h2>Welcome!</h2>
-    <p>I’m Fran, a UK-based veterinary locum with a special interest in ophthalmology. This site shares what I use, what I learn, and what helps.</p>
+    <p>This mini-site is a small window into the gear, tools, and insights I rely on in day-to-day veterinary practice — especially as a mobile ophthalmologist and first opinion locum. Whether you're a fellow vet, nurse, or just curious about what makes the job tick, you'll find practical info, kit recommendations, and a few lessons learned on the road.
+
+Have a look around — and if you're after locum cover with a special interest in eyes, don't miss the CV section.</p>
 <br/>
+
+    
+    <!--
     <h3>🔧 Featured Tool</h3>
     <p><strong>Penlight for Pupils:</strong> My go-to pupil-checking lamp is the <a href="https://www.amazon.co.uk/your-affiliate-link" target="_blank">Keeler Professional Penlight</a> – solid, reliable, and always in my pocket.</p>
+-->
 
+    
     <p><em>As an Amazon Associate, I earn from qualifying purchases.</em></p>
   </main>
 
