--- a/tools.html
+++ b/tools.html
@@ -44,12 +44,12 @@
 
             <!-- Producto 2 -->
         <div class="tool-card" id="cu6(2)">
-            <h2>Nitecore CU6 Torch</h2>
+            <h2>Nitecore MT06MD Torch</h2>
           
-              <h3>Colorimetric PLR can help you differenciate SARDS cases. This torch is not specifically designed for this purpose but may be used as such</h3>
-              <a href="https://amzn.to/4kCurZn" target="_blank" rel="nofollow">
-              <img src="https://m.media-amazon.com/images/I/61qDe47G8JL._AC_SX425_.jpg" alt="torch" style="width: 100%; height: auto; border-radius: 4px;">
-              <p style="font-size: 1em; margin: 10px 0;">Potential workaround for colorimetric PLR</p>
+              <h3>A tool to check your dazzle and PLR reflexes. More potent and compact than your ophthalmoscope</h3>
+              <a href="https://amzn.to/44SpBS8" target="_blank" rel="nofollow">
+              <img src="https://m.media-amazon.com/images/I/517FefN+pTL._AC_SX425_.jpg" alt="penlight" style="width: 100%; height: auto; border-radius: 4px;">
+              <p style="font-size: 1em; margin: 10px 0;">I often find that people struggle to judge Dazzle and PLRs. These are cornerstones of your neuro-ophthalmology exam, which frequently cannot be determined with most ophthalmoscopes. Why? They are not potent enough. A pen torch like this can solve that problem for very little money.</p>
       
               <button style="background: #FF9900; border: none; padding: 10px 16px; color: white; border-radius: 5px; cursor: pointer;">Ver en Amazon</button>
               </a>
