--- a/tools.html
+++ b/tools.html
@@ -54,6 +54,7 @@
       
               <button style="background: #FF9900; border: none; padding: 10px 16px; color: white; border-radius: 5px; cursor: pointer;">Ver en Amazon</button>
               </a>
+              <p>I often find that vets struggle to judge Dazzle and PLRs. These are cornerstones of your neuro-ophthalmology exam, which frequently cannot be determined with most ophthalmoscopes. Why? They are not potent enough.</p> 
         </div>
 
             <!-- Producto 3 -->
