--- a/about.html
+++ b/about.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <header>
-    <h2>About Me</h2>
+    <h2>Hire Me</h2>
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="about.html">Hire me</a>
       <a href="tools.html">My Tools</a>
     </nav>
   </header>
@@ -19,10 +19,13 @@
   <main>
     
     <img src="https://images.squarespace-cdn.com/content/v1/67178c2658c106048e1a55ba/450ba059-0a63-43a6-8bd7-5dea516f8f2e/consulta.jpg?format=750w" alt="consultation and francisco" style="width: 100%; height: auto; border-radius: 4px;">
-    <p>Hello! I’m Fran, a mobile veterinary ophthalmologist in Costa del Sol. I often work in the UK as a first opinion locum. I've worked across multiple practices, supporting teams and bringing my ophthalmology experience and some of my tools to get the job done efficiently.</p>
-    <p>In this site, I share <a href="tools.html">useful gear I carry</a>, and little tips from my day-to-day locum work. Feel free to explore!</p>
-    <p>Interested in hiring me as a locum? Check out my CV <a href="https://ojoveterinario.es/cv-english">here.</a></p>
-  </main>
+    <p>Hello! I’m Fran — a mobile veterinary ophthalmologist based in the Costa del Sol. I regularly work in the UK as a first opinion locum, supporting teams across a wide range of practices. I bring my ophthalmology experience (and some of my own tools) to help get the job done efficiently and confidently.</p>
+
+  <p>This site is where I share a few of the tools I carry and tips from my day-to-day locum life:<br>
+  👉 <a href="tools.html">Browse my gear</a></p>
+
+  <p>If you’re looking for a locum vet — whether for general practice or ophthalmology support — you can view my CV here :<br>
+  📄 <a href="https://ojoveterinario.es/cv-english" target="_blank" rel="noopener noreferrer">Check out my CV</a>(includes contact form)</p>  </main>
 
   <footer>
     <p>© 2025 Francisco Gómez</p>
