--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <h2>Hire Me</h2>
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html">Hire me</a>
+      <a href="about.html">Locum Hire</a>
       <a href="tools.html">My Tools</a>
     </nav>
   </header>
