--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="UTF-8" />
-  <title>About Fran Gómez</title>
+  <title>Locum Hire</title>
   <link rel="stylesheet" href="assets/style.css" />
 </head>
 <body>
@@ -24,8 +24,9 @@
   <p>This site is where I share a few of the tools I carry and tips from my day-to-day locum life:<br>
   👉 <a href="tools.html">Browse my gear</a></p>
 
-  <p>If you’re looking for a locum vet — whether for general practice or ophthalmology support — you can view my CV here :<br>
-  📄 <a href="https://ojoveterinario.es/cv-english" target="_blank" rel="noopener noreferrer">Check out my CV</a>(includes contact form)</p>  </main>
+  <p>If you’re looking for a locum vet — whether for general practice or ophthalmology support — you can view my CV here (includes contact form):<br>
+  📄 <a href="https://ojoveterinario.es/cv-english" target="_blank" rel="noopener noreferrer">Check out my CV</a></p>
+  </main>
 
   <footer>
     <p>© 2025 Francisco Gómez</p>
