--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <p>Locum Vet | CertAVP PgC(SAO) & AP in Ophthalmology | Affiliate Tools & Tips</p>
     <nav>
       <a href="index.html">Home</a>
-      <a href="about.html">About</a>
+      <a href="about.html">Locum Hire</a>
       <a href="tools.html">My Tools</a>
     </nav>
   </header>
