--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">Locum Hire</a>
       <a href="tools.html">My Tools</a>
+      <a href="cpd.html"></a>
     </nav>
   </header>
 
