--- a/tools.html
+++ b/tools.html
@@ -13,6 +13,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">Locum Hire</a>
       <a href="tools.html">My Tools</a>
+      <a href="cpd.html">CPD</a>
     </nav>
   </header>
 
