--- a/cpd.html
+++ b/cpd.html
@@ -18,12 +18,12 @@
   </header>
 
   <main>
-    <p>Are you interested on low-cost video cpd on ophthalmology?</p>
+    <p>Are you interested in low-cost video cpd on Ophthalmology?</p>
     <p>Leave your email and I'll contact you when ready</p>
   </main>
 
   <footer>
-    <p>© 2025 Francisco Gómez | Built with GitHub Pages</p>
+    <p>© 2025 Francisco Gómez | <a href="https://frangomezdigital.com">Let me built your website</a></p>
   </footer>
 </body>
 </html>
