--- a/cpd.html
+++ b/cpd.html
@@ -23,7 +23,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Francisco Gómez | <a href="https://frangomezdigital.com">Let me built your website</a></p>
+    <p>© 2025 Francisco Gómez | <a href="https://frangomezdigital.com/index_en.html">Let me built your website</a></p>
   </footer>
 </body>
 </html>
