--- a/cpd.html
+++ b/cpd.html
@@ -19,7 +19,7 @@
 
   <main>
     <p>Are you interested in low-cost video cpd on Ophthalmology?</p>
-    <a href="https://forms.gle/tTGR3FQBpULUxDhL6">Leave your email and I'll contact you when ready</a>>
+    <a href="https://forms.gle/tTGR3FQBpULUxDhL6">Leave your email and I'll contact you when ready</a>
   </main>
 
   <footer>
