--- a/tools.html
+++ b/tools.html
@@ -23,7 +23,7 @@
 <ul class="tool-index">
   <li><a href="#1">Nitecore MT06MD Torch</a></li>
   <li><a href="#2">Best AAA batteries</a></li>
-  <li><a href="#3">BEXCO 20D Lens</a></li>
+  <li><a href="#5">BEXCO 20D Lens</a></li>
   <li><a href="#4">Blukar Head Torch</a></li>
   <li><a href="#6">Nitecore CU6 Torch</a></li>
 </ul>
@@ -74,15 +74,15 @@
     <a href="https://amzn.to/46XqnzH" target="_blank" rel="nofollow"><button style="background: #FF9900; border: none; padding: 10px 16px; color: white; border-radius: 5px; cursor: pointer;">Ver en Amazon</button></a>
 </div>
 
-      <!-- Product 5 -->
+<!-- Product 5 -->
 <div class="tool-card" id="5">
-    <h2>Duracell Optimum AAA Batteries</h2>
-    <h3>Long-lasting power for pen torches and essential tools</h3>
-    <a href="https://amzn.to/4kXnh22" target="_blank" rel="nofollow">
-    <img src="https://m.media-amazon.com/images/I/81WmlPl87-L._AC_SX425_.jpg" alt="Duracell Optimum AAA batteries" style="width: 100%; height: auto; border-radius: 4px;"></a>
-    <p>For pen torches and other tools, the Optimum range is always my way to go. They last longer and it's less likely I'll run out of battery while on the job.</p>
-    <p style="font-size: 1em; margin: 10px 0;">Reliable power when you need it most—ideal for medical devices and emergency equipment.</p>
-    <a href="https://amzn.to/4kXnh22" target="_blank" rel="nofollow"><button style="background: #FF9900; border: none; padding: 10px 16px; color: white; border-radius: 5px; cursor: pointer;">Ver en Amazon</button></a>
+    <h2>BEXCO 20D Double Aspheric Ophthalmic Magnifier Lens</h2>
+    <h3>An affordable alternative for indirect retinal examination</h3>
+    <a href="https://amzn.to/40xpRo8" target="_blank" rel="nofollow">
+    <img src="https://m.media-amazon.com/images/I/51R+AR9fpxL._SY445_SX342_QL70_ML2_.jpg" alt="BEXCO 20D ophthalmic lens" style="width: 100%; height: auto; border-radius: 4px;"></a>
+    <p>A very economic alternative for indirect retinal examination (in combination with pen torch) for those that can't afford an expensive condensing lens.</p>
+    <p style="font-size: 1em; margin: 10px 0;">This double aspheric design provides clear, distortion-free viewing for effective fundus examination.</p>
+    <a href="https://amzn.to/40xpRo8" target="_blank" rel="nofollow"><button style="background: #FF9900; border: none; padding: 10px 16px; color: white; border-radius: 5px; cursor: pointer;">Ver en Amazon</button></a>
 </div>
 
 
