--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Have a look around — and if you're after locum cover with a special interest i
   </main>
 
   <footer>
-    <p>© 2025 Francisco Gómez | <a href="https://frangomezdigital.com/index_en.html">Let me built your website</a></p>
+    <p>© 2025 Francisco Gómez | <a href="https://frangomezdigital.com/index_en.html">Let me build your website</a></p>
   <img src="https://hitcount.dev/p/theGOvet/frangomez-vet.svg" alt="Visitor Counter"> 
   </footer>
 </body>
