--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Francisco Gómez | <a href="https://frangomezdigital.com/index_en.html">Let me built your website</a></p>
+    <p>© 2025 Francisco Gómez | <a href="https://frangomezdigital.com/index_en.html">Let me build your website</a></p>
   </footer>
 </body>
 </html>
