--- a/tools.html
+++ b/tools.html
@@ -42,7 +42,7 @@
               <img src="https://m.media-amazon.com/images/I/517FefN+pTL._AC_SX425_.jpg" alt="penlight" style="width: 100%; height: auto; border-radius: 4px;"></a>
               <p>I often find that vets struggle to judge Dazzle and PLRs. These are cornerstones of your neuro-ophthalmology exam, which frequently cannot be determined with most ophthalmoscopes. Why? They are not potent enough.</p>
               <p style="font-size: 1em; margin: 10px 0;">A This pen torch like this can solve that problem for very little money.</p>
-              <p style="font-size: 1em; margin: 10px 0;">At its lowest setting, it potentially can allow you retinal examination with condensing lens without causing undue discomfort</p>
+              <p style="font-size: 1em; margin: 10px 0;">At its lowest setting, it potentially can allow you retinal examination with condensing lens without causing undue discomfort. <a href="https://youtube.com/shorts/_2NzVEyPGxw?feature=share" target="_blank" rel="nofollow">See video</a></p>
               <a href="https://amzn.to/44SpBS8" target="_blank" rel="nofollow"><button style="background: #FF9900; border: none; padding: 10px 16px; color: white; border-radius: 5px; cursor: pointer;">Ver en Amazon</button></a>
               
         </div>
