--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">Locum Hire</a>
       <a href="tools.html">My Tools</a>
-      <a href="antiparasitic-generator.html">Antiparasitic presc note</a>
+      <a href="antiparasitic-generator.html">Antiparasitic notes generator</a>
       <a href="cpd.html">CPD</a>
     </nav>
   </header>
