--- a/antiparasitic-generator.html
+++ b/antiparasitic-generator.html
@@ -1,2 +1,2 @@
-<p>This page is optimised to be used in desktop/laptop</p>
+<h3>This page is optimised to be used in desktop/laptop</h3>
 <iframe src="https://thegovet.github.io/antiparasitic-generator/" width="100%" height="600px"></iframe>
