--- a/antiparasitic-generator.html
+++ b/antiparasitic-generator.html
@@ -1,2 +1,10 @@
 <h3>This page is optimised to be used in desktop/laptop</h3>
 <iframe src="https://thegovet.github.io/antiparasitic-generator/" width="100%" height="600px"></iframe>
+<h2>Thank you for visiting frangomezvet.com</h2>
+
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">Locum Hire</a>
+      <a href="tools.html">My Tools</a>
+      <a href="cpd.html">CPD</a>
+    </nav>
