--- a/antiparasitic-generator.html
+++ b/antiparasitic-generator.html
@@ -226,7 +226,7 @@
     
     <div class="container">
         <div class="notice">
-            <h3>This page is optimized for both desktop and mobile use</h3>
+            <h3>This page is optimised for both desktop and mobile use</h3>
         </div>
         
         <div class="iframe-container">
