--- a/antiparasitic-generator.html
+++ b/antiparasitic-generator.html
@@ -235,6 +235,7 @@
         
         <div class="product-display" id="productDisplay">
             <h2>Recommended Veterinary Tool</h2>
+            <p>All links may be affiliated links</p>
             <div id="productContent">
                 <p>Loading recommended products...</p>
             </div>
