--- a/antiparasitic-generator.html
+++ b/antiparasitic-generator.html
@@ -233,7 +233,7 @@
             <iframe src="https://thegovet.github.io/antiparasitic-generator/" title="Antiparasitic Generator"></iframe>
         </div>
         
-        <div class="product-display" id="productDisplay">
+        <div class="product-display" id="productDisplay"  style="max-height: 200px;">
             <h2>Recommended Veterinary Tool</h2>
             <p>All links may be affiliated links</p>
             <div id="productContent">
