--- a/antiparasitic-generator.html
+++ b/antiparasitic-generator.html
@@ -233,10 +233,10 @@
             <iframe src="https://thegovet.github.io/antiparasitic-generator/" title="Antiparasitic Generator"></iframe>
         </div>
         
-        <div class="product-display" id="productDisplay"  style="max-height: 200px;">
+        <div class="product-display" id="productDisplay">
             <h2>Recommended Veterinary Tool</h2>
             <p>All links may be affiliated links</p>
-            <div id="productContent">
+            <div id="productContent" style="max-height: 200px;">
                 <p>Loading recommended products...</p>
             </div>
         </div>
