--- a/antiparasitic-generator.html
+++ b/antiparasitic-generator.html
@@ -232,14 +232,17 @@
         <div class="iframe-container">
             <iframe src="https://thegovet.github.io/antiparasitic-generator/" title="Antiparasitic Generator"></iframe>
         </div>
-        
+       <div style="max-height: 200px; overflow: auto;">
+
+ 
         <div class="product-display" id="productDisplay">
             <h2>Recommended Veterinary Tool</h2>
             <p>All links may be affiliated links</p>
-            <div id="productContent" style="max-height: 200px;">
+            <div id="productContent">
                 <p>Loading recommended products...</p>
             </div>
         </div>
+       </div> 
     </div>
     
     <footer>
