--- a/antiparasitic-generator.html
+++ b/antiparasitic-generator.html
@@ -225,10 +225,9 @@
     </nav>
     
     <div class="container">
-       <div style="max-height: 200px; overflow: auto;">
+       <div style="max-height: 250px; overflow: auto;">
         <div class="product-display" id="productDisplay">
-            <h2>Recommended Veterinary Tool</h2>
-            <p>All links may be affiliated links</p>
+            <p>All links may be affiliated links. Recommended Veterinary tool</p>
             <div id="productContent">
                 <p>Loading recommended products...</p>
             </div>
@@ -242,7 +241,7 @@
         
         <div class="product-display" id="productDisplay">
             <h2>Recommended Veterinary Tool</h2>
-            <p>All links may be affiliated links</p>
+            <p>All links may be affiliated links. Recommended Veterinary tool</p>
             <div id="productContent">
                 <p>Loading recommended products...</p>
             </div>
