--- a/antiparasitic-generator.html
+++ b/antiparasitic-generator.html
@@ -225,13 +225,8 @@
     </nav>
     
     <div class="container">
-       <div style="max-height: 250px; overflow: auto;">
-        <div class="product-display" id="productDisplay">
-            <p>All links may be affiliated links. Recommended Veterinary tool</p>
-            <div id="productContent">
-                <p>Loading recommended products...</p>
-            </div>
-        </div>
+            <p>Thank you for visiting this page</p>
+            <p>Don't forget to scroll down to view a recommended veterinary tool. All links may be affiliated links</p>
        </div> 
         
         <div class="iframe-container">
