--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ Have a look around — and if you're after locum cover with a special interest i
   </main>
 
   <footer>
+    <p><a href="articles/the-locum-paradox.html">📰 Read: The Locum Paradox</a></p>
     <p>© 2025 Francisco Gómez | <a href="https://frangomezdigital.com/index_en.html">Let me build your website</a> | <a href="https://frangomezdigital.com/contact.html">Contact</a></p>
   <img src="https://hitcount.dev/p/theGOvet/frangomez-vet.svg" alt="Visitor Counter"> 
   </footer>
